--- a/EditTimesheets/InputCheckInCheckOutView.xib
+++ b/EditTimesheets/InputCheckInCheckOutView.xib
@@ -38,7 +38,7 @@
                     <color key="textColor" red="0.23137254901960785" green="0.21568627450980393" blue="0.19607843137254902" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lEg-9X-ab6">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lEg-9X-ab6">
                     <rect key="frame" x="98" y="15.5" width="36" height="25"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="36" id="4fY-Zh-Kh7"/>
